# Audiobook_Generator_Vanilla

./: .gitignore  FAQ.md  README.md  README_CREDENTIALS.md  pyproject.toml  test_list.txt  work_summary_report.txt
scripts/: check_credentials.py  create_test_docx.py  create_test_epub.py  install_ffmpeg.py  install_spacy_model.py  setup_credentials.py  test_complex_segmentation.py  test_epub_extraction.py  test_sentence_segmentation.py  test_sentence_segmentation_epub.py
src/: audio_generator.py  config.py  main.py  text_processor.py
