[project]
name = "audiobook-generator"
version = "0.1.0"
description = "Text to audiobook converter with secure API handling"
license = "AGPL-3.0-or-later"
authors = [
    {name = "Ferenc Acs", email = "<pass.schist2954@eagereverest.com>"},
    ]

[tool.poetry]
packages = [{include = "src", from = "."}]

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
python-dotenv = "^0.19.0"
openai = "^1.3.6"
pydub = "^0.25.1"
python-docx = "^0.8.11"
ebooklib = "^0.18"
tqdm = "^4.66.1"
keyring = "^25.6.0"
beautifulsoup4 = "^4.12.2"
lxml = "^5.3.2"
spacy = "^3.7.5"

[tool.poetry.group.dev.dependencies]
poetry-dynamic-versioning = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"